Error: User update not working
