# api/models/User.js
@@ -2,18 +2,14 @@ const mongoose = require("mongoose");
 
 const UserSchema = new mongoose.Schema(
   {
-    username: { type: String, required: true},
+    name: { type: String, required: true },
     email: { type: String, required: true, unique: true },
     password: { type: String, required: true },
-    isAdmin: {
-      type: Boolean,
-      default: false,
-    },
-    isVolunteer: {
-      type: Boolean,
-      default: false,
-    },
-    img: { type: String },
+    isAdmin: { type: Boolean, default: false },
+    isVolunteer: { type: Boolean, default: false },
+    image: { type: String, default: "" },
+    phone: { type: String, default: "" },
+    address: { type: String, default: "" },
   },
   { timestamps: true }
 );
